bug 89116 - rebalance table on cell incremental reflow when maximum width changes. sr=attinasi, r=alexsavulov.